@@ -1,5 +1,7 @@
 === master
 
+* Add help_order method to support ordering and/or suppressing help sections (jeremyevans)
+
 * Move usages method to a usages plugin (jeremyevans)
 
 * Allow Processor#on to work with a block and no argument to configure the root command (jeremyevans)
